<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DetailMovieView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMovie"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/imgPhotoMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_not_available">
                </ImageView>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewMovie"
                android:text="@string/title_movie"
                android:textSize="22sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/txtDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitle"
                android:text="@string/duration_movie"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>


            <TextView
                android:id="@+id/txtDataDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDuration"
                android:text="@string/duration_movie"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtDateRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDataDuration"
                android:text="@string/date_release_movie"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/txtDataDateRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDateRelease"
                android:text="@string/date_release_movie"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDataDateRelease"
                android:text="@string/vote_movie"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/txtDataVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtVote"
                android:text="@string/vote_movie"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDataVote"
                android:text="@string/genre_movie"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/txtDataGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtGenre"
                android:text="@string/genre_movie"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDataGenre"
                android:text="@string/description_movie"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/txtDataDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescription"
                android:text="@string/description_movie"
                android:textSize="18sp"
                android:padding="5dp"
                android:textColor="@color/black">
            </TextView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

